# gstreamer-test-projects

./: CMakeLists.txt  main.cpp
src/: buffer.cpp  buffer.h  gstreamer.cpp  gstreamer.h
